[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/objects/full_heart.png" type="Texture" id=1]
[ext_resource path="res://Scripts/UI/HeartsUI.gd" type="Script" id=2]
[ext_resource path="res://Assets/objects/empty_heart.png" type="Texture" id=3]

[node name="HeartsUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Heart3" type="Sprite" parent="."]
position = Vector2( 140, 20 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="Heart2" type="Sprite" parent="."]
position = Vector2( 86, 20 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="Heart1" type="Sprite" parent="."]
position = Vector2( 32, 20 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="EmptyHeart1" type="Sprite" parent="."]
position = Vector2( 32, 20 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="EmptyHeart2" type="Sprite" parent="."]
position = Vector2( 86, 20 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="EmptyHeart3" type="Sprite" parent="."]
position = Vector2( 140, 20 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
